force-app/main/default/objects/Vehicle_Type__c/Vehicle_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>VIP Booking Vehicle Type</description>
    <label>Vehicle Type</label>
</CustomObject>