force-app/main/default/objects/Vehicle_Type__c/fields/Limousine__c.field-meta.xml
<CustomField>
    <fullName>Limousine__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Limousine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>