force-app/main/default/objects/Vehicle_Type__c/fields/Luggage_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Luggage_Capacity__c</fullName>
    <label>Luggage Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>