force-app/main/default/objects/Vehicle_Type__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>