force-app/main/default/objects/Vehicle_Type__c/fields/Trailer_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailer Attachment Possible?</label>
    <type>Checkbox</type>
</CustomField>