force-app/main/default/objects/Vehicle_Type__c/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Limousine__c</columns>
    <columns>Property__c</columns>
    <columns>Seat_Capacity__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
</ListView>